k8s/stats/grafana/grafana.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  namespace: stats
  labels:
    app: grafana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      containers:
      - name: grafana
        image: grafana/grafana
        imagePullPolicy: Always
        ports:
          - containerPort: 3000
            name: "graphana"
        volumeMounts:
        - name: grafana-config
          mountPath: /config/
        - name: grafana-data
          mountPath: /var/lib/grafana
      volumes:
        - name: grafana-config
          configMap:
            name: grafana-config
        - name: grafana-data
          persistentVolumeClaim:
            claimName: grafana-pvc
